[tool.poetry]
name = "jraygon-bot"
version = "0.1.0"
description = ""
authors = ["redstonedesigner <redstonedesigner1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
voxelbotutils = "^0.8.1"
httpx = "^0.19.0"
novus = {git = "https://github.com/Voxel-Fox-Ltd/Novus.git"}
pytz = "^2021.3"

[tool.poetry.dev-dependencies]
black = "^21.9-beta.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
